--- a/.travis.yml
+++ b/.travis.yml
@@ -104,6 +104,7 @@ matrix:
       osx_image: xcode7.3
       compiler: clang
       env: SCRIPT=cmake-osx
+    - env: SCRIPT=arduino VERSION=1.6.7 BOARD=arduino:avr:uno
     - env: SCRIPT=arduino VERSION=1.6.12 BOARD=arduino:avr:uno
     - env: SCRIPT=platformio BOARD=uno
     - env: SCRIPT=platformio BOARD=due
